ShellAppSystem: dynamically generate known_vendor_prefixes

It create prefix based on desktop file's id and desktop file's path and vendor_prefix.
https://bugzilla.gnome.org/show_bug.cgi?id=620464